--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project default="compile">
 
 
-    <property name="src.java.dir" location="./src/calc/Calc"/>
+    <property name="src.java.dir" location="./src/calc/Calc.java"/>
     <property name="src.test.dir" location="./src/test/test"/>
     <property name="result.dir" location="./target"/>
     <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
