--- a/build.xml
+++ b/build.xml
@@ -2,8 +2,8 @@
 <project default="compile">
 
 
-    <property name="src.java.dir" location="./src/calc/Calc"/>
-    <property name="src.test.dir" location="./src/test/test"/>
+    <property name="src.java.dir" location="./Calc/src/calc/Calc"/>
+    <property name="src.test.dir" location="./Calc/src/test/test"/>
     <property name="result.dir" location="./target"/>
     <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
     <property name="result.testclasses.dir" location="${result.dir}/testclasses"/>
