--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project default="compile">
 
     <property name="src.test.dir" location="./test/test"/>
-    <property name="src.java.dir" location="./calc/Calc"/>
+    <property name="src.java.dir" location="./src/Calc"/>
     <property name="result.dir" location="./target"/>
     <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
     <property name="result.testclasses.dir" location="${result.dir}/testclasses"/>
